# peak

./: CMakeLists.txt  README.md
impl/inc/: analyzer.h  event_generator.h  exceptions.h  peak_analyzer.h
impl/src/: CMakeLists.txt  event_generator.cpp  main.cpp  peak_analyzer.cpp
test/: CMakeLists.txt  testAnalyzer.cpp
